--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -15,8 +15,10 @@ body{
 .container{
     margin: auto;
 }
+
 header{
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(13,14,18);
+    color: white;
 }
 
 header .logo{
@@ -27,14 +29,11 @@ header .logo{
     font-size: 1.5em;
 }
 
-
 header .container{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-
 
 header nav{
     display: flex;
