--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,6 +1,6 @@
 {%extends 'index.html' %}
 {%load static %}
-{% block titulo %} Home {% endblock titulo %}
+{% block titulo %} Sobre nosotros {% endblock titulo %}
 {% block header %}
 <section class="hero">
     <h1>Quienes somos</h1>
