--- a/blog/templates/noticias/inicio.html
+++ b/blog/templates/noticias/inicio.html
@@ -1,8 +1,14 @@
 {%extends 'index.html' %}
 {%load static %}
-{% block titulo %} Home {% endblock titulo %}
+{% block titulo %} Noticias {% endblock titulo %}
 {% block header %}
-<section class="hero">
-    <h2>Soy las noticias</h2>
-</section>
+
+{% for noticia in noticias %}
+<h1><a href="{% url 'noticias:inicio' %}">{{noticia.titulo}}</a></h1>
+<h6>{{noticia.fecha}} - {{noticia.categoria_noticias}}</h6>
+<p>{{ noticia.cuerpo }}</p>
+<img src="{{noticia.imagen.url}}" alt="">
+{% endfor %}
+
+
 {% endblock header %}
