--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -3,9 +3,31 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     background-color: rgb(13,14,18);
+    color: white;
 }
 
 h1{
+    color: white;
+}
+h2{
+    color: white;
+}
+h3{
+    color: white;
+}
+h4{
+    color: white;
+}
+h5{
+    color: white;
+}
+h6{
+    color: white;
+}
+p{
+    color: white;
+}
+ul{
     color: white;
 }
 
@@ -14,9 +36,6 @@ body{
 }
 .container{
     margin: auto;
-}
-header{
-    background-color: rgb(245, 245, 245);
 }
 
 header .logo{
@@ -33,8 +52,6 @@ header .container{
     flex-direction: column;
     align-items: center;
 }
-
-
 
 header nav{
     display: flex;
