--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -15,6 +15,7 @@
         <a href="{% url 'logout'%}">Cerrar sesión</a>
         {% else %}
         <a href="{% url 'login'%}">Iniciar sesión</a>
+        <a href="{% url 'usuarios:register'%}">Registrar</a>
         {% endif %}
     </header>
     <header>
