--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -10,17 +10,19 @@
 </head>
 <body>
     <header>
-        {% if user.is_authenticated %}
-        <p>Bienvenido {{ user.username }} </p>
-        <a href="{% url 'logout'%}">Cerrar sesión</a>
-        {% else %}
-        <a href="{% url 'login'%}">Iniciar sesión</a>
-        <a href="{% url 'usuarios:register'%}">Registrar</a>
-        {% endif %}
-    </header>
-    <header>
         <div class="container">
             <p class="logo">#NuestroBlog!</p>
+            <div class="login">
+                {% if user.is_authenticated %}
+                <p>Bienvenido {{ user.username }} </p>
+                <a href="{% url 'logout'%}">Cerrar sesión</a>
+                {% else %}
+                <a href="{% url 'login'%}">Iniciar sesión</a>
+                <a href="{% url 'usuarios:register'%}">Registrar</a>
+                {% endif %}
+            </div>
+        </div>
+        <div>
             <nav>
                 <a href="{% url 'home'%}">Inicio</a>
                 <a href="{% url 'noticias:inicio'%}">Noticas</a>
@@ -34,7 +36,7 @@
 </body>
 <footer>
     <div class="container">
-        <p>Grupo 2 - Derechos reservados</p>
+        <p>Grupo 2 - Comisión 5</p>
     </div>
     {% block footer %} {% endblock footer%}
 </footer>
